
*****

Enabled bottom-toolbar info for PDFs in u.AlwaysPassValidator().

*****

Reworded bibm pdf prompt text (more descriptive).

*****

Added history to PDF-related prompts.

*****

Couple of tweaks in tests to prevent creating files while testing.


*****  So 26. Jan 16:38:17 CET 2020  *****

Adjusted u.KeyWordCompleter() to offer value options only when
key ends with a colon (improve ADS-searches).

Tweaked u.AutoSuggestCompleter() to parse text in the same way as
u.KeyWordCompleter() does.

*****

Use u.KeyWordCompleter() instead of a WordCompleter() in the
cli_ads_search() function.
Some other minor tweaks in screen outputs.
Adjusted CLI tests.

*****

Added gifs to docs (search and fetch commands) to show auto-complete
behavior.

*****

Added 'Featured Articles' into the docs home.

*****

Added the gif files.

*****

Updated API docs.

*****

Added exceptions for file not found in lm.compile_latex() and
lm.compile_pdflatex() functions.
Enable passing argument without extension. 
Added respective tests.

*****

Catch file-not-found errors when compiling latex files via the CLI
Added respective tests.
This resolves #31


*****  Mon Jan 27 08:57:49 CET 2020  *****

Bumped bibmanager version to 1.2.0rc2.


*****  Di 28. Jan 09:34:52 CET 2020  *****

Ensured to expand user of PDF files in cli_link() function.

*****

Bumped bibmanager version to 1.2.0rc3.

*****

Fixed bug from last edit when pdf is None.

*****

Bumped bibmanager version to 1.2.0rc4.


*****  Fri Jan 31 12:46:22 CET 2020  *****

Added month ValueError when input is not a valid string.
Added tests for month inputs.


*****  Sun Feb  2 20:09:54 CET 2020  *****

Updated contributors section in docs.

*****

Fixed typo in pip-install command in the docs.

*****

Bumped bibmanager version to 1.2.0.
New release (exclamation mark).


*****  Mi 12. Feb 18:11:31 CET 2020  *****

Added check for requests before getting json from response.
Untested, only for debugging purposes.
Set version to 1.2.1.dev0